<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="4"
    android:verticalSpacing="8dp">

    <TextView
        android:id="@+id/a1_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/a1_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/a1_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:hint="@string/eq_hint"

        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/a2_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/a2_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/a2_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:hint="@string/eq_hint"
        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/b1_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/b1_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/b1_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:padding="8dp"
        android:hint="@string/eq_hint"
        android:layout_margin="4dp"
        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/b2_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/b2_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/b2_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:hint="@string/eq_hint"
        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/c1_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/c1_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/c1_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:hint="@string/eq_hint"
        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/c2_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/c2_tag"
        android:layout_margin="4dp"
        style="@style/TextViewsInputsTheme"/>

    <EditText
        android:id="@+id/c2_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:hint="@string/eq_hint"
        style="@style/EditTextTheme" />

</GridLayout>