<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/a_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tag"
        style="@style/TextViewsInputsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/a_input"
        app:layout_constraintBottom_toBottomOf="@id/a_input" />

    <EditText
        android:id="@+id/a_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/others_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a_tag"
        style="@style/EditTextTheme" />

    <TextView
        android:id="@+id/b_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_tag"
        style="@style/TextViewsInputsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/b_input"
        app:layout_constraintBottom_toBottomOf="@id/b_input" />

    <EditText
        android:id="@+id/b_input"
        style="@style/EditTextTheme"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/others_hint"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toEndOf="@id/b_tag"
        app:layout_constraintTop_toBottomOf="@id/a_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
